--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<html>
+  <head>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
+  <body>
+  <div class ="navbar">
+    <div class ="navmenu">Re.build</div>
+
+    <div class ="navmenu">New Products</div>
+    <div class ="navmenu">Refurbished materials</div>
+    <div class ="navmenu">Contact</div>
+    <div class ="navmenu">Custom Orders</div>
+    <div class="absolute">Bring new life to an old favorite. First introduced in the 1950's. Some 60 years later we brought it back with the same craftmanship and comfort</div>
+
+
+  </div>
+<button class ="button">
+  <a href="Start Shopping">"Start Shopping"</a>
+</button>
+<img src="furniture.png" alt="Furniture" class="center">
+
+
+
+
+  </body>
+</html>
